--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@tabler/icons-react": "^3.11.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.424.0",
+		"mongoose": "^8.5.2",
+		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18",
-		"next": "14.2.5"
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"typescript": "^5",
+		"@commitlint/cli": "^18.4.3",
+		"@commitlint/config-conventional": "^18.4.3",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"husky": "^8.0.3",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
-		"eslint": "^8",
-		"husky": "^8.0.3",
-		"@commitlint/cli": "^18.4.3",
-		"@commitlint/config-conventional": "^18.4.3",
-		"eslint-config-next": "14.2.5"
+		"typescript": "^5"
 	}
 }
