--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"lucide-react": "^0.424.0",
 		"mongoose": "^8.5.2",
 		"next": "14.2.5",
+		"next-auth": "5.0.0-beta.20",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.4.0",
@@ -31,8 +32,8 @@
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.5",
-		"postcss": "^8",
 		"husky": "^9.0.11",
+		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
